# Caipture

./: .editorconfig  .env.example  .gitignore  Containerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/podman/: compose.yml
deploy/systemd/: caipture-web.service  caipture-worker-cv.service  caipture-worker-export.service  caipture-worker-metadata.service  caipture-worker-ocr.service  caipture-workers.target
docs/: architecture.md  metadata-schema.md  requirements.md  test-strategy.md  trust-boundaries.md
docs/adr/: 0001-monorepo.md  0002-poc-runtime-stack.md  0003-monitoring-and-bdd-testing.md  0004-ocr-evidence-fusion-and-handwriting-profile.md  0005-subject-first-upload-and-in-page-job-actions.md  0006-jpeg-upload-compatibility.md  0007-manual-metadata-and-robust-cv-subject-detection.md
scripts/dev/: compose_down.sh  compose_up.sh  run_pipeline_once.sh  start_all.sh  stop_all.sh  sync_root_readme.py
scripts/test/: run_all.sh  run_bdd.sh
services/llm-gateway/: README.md  main.py
services/web/: README.md  server.py
services/worker-cv/: README.md  main.py
services/worker-export/: README.md  main.py
services/worker-metadata/: README.md  main.py
services/worker-ocr/: README.md  main.py
src/caipture/: __init__.py  cli.py  config.py  journal.py  llm_gateway.py  metadata.py  models.py  pipeline.py  queue.py  session_metrics.py  store.py  utils.py
tests/: test_utils.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_config.py  test_journal_queue.py  test_metadata_schema.py  test_pipeline_unit.py  (+2 more)
(+5 files in other folders)
