[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caipture"
version = "0.1.0"
description = "Local-first photo digitization pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.3",
    "opencv-python==4.13.0.92",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
